feat: add swagger for api documentation
